- fixed platform in Jharkendar for Beliar storyline only being triggerable with zap and not other lightning spells
- fixed Malcom not taking his money bag anymore when he's already in Jharkendar
- fixed Ramirez complaining when stealing judge's clothes
- fixed thieves in treasure chamber in Khorata complaining when hero takes something


1.0.9

Enhancements:

- added teachers for 1H and 2H to Old Camp

Fixes:

- fixed some not working Waterpipes
- Liselotte's quest fails when opening her package
- fixed Attila still being in Khorinis as well when he moved to Khorata
- fixed Lester being both in Relendel and Khorinis
- blocking all user input now while Schagby and Puzzle are running
- fixed picking Salt for pirates removing pickaxe
- fixed Parlan's Ring quest
- added damage caps for Axe of Doom
- all (non-Quest) weapons can be sharpend now
- Brandon quest now also works when joining Xardas' guild
- fixed 'Ring des Künstlers'
- fixed missing Krauttroll for 'Leichengase' quest
- improved code to forbid selling quest items
- fixed Valentino being in city even though he should be kidnapped
- fixed Bandits at Keith's hut going nuts


1.0.8

Fixes:

- Dragomir can't be beaten for quest 'Parlan's Ring'
- fixed crash in Irdorath
- fixed error in dialogs with Water Mages/Warriors at certain point of the story
- added hack to work around disappearing quest items


1.0.7

Enhancements:

- added some takes

General Fixes:

- Aldaro gives ring now directly after start of the Snow Ghost quest when his sickness was healed
- Snorre now is immortal until he had his quest
- Fixed wrong condition for removing Mika and Jesper during Paladin quest
- Fixed wrong protection values of loot Ghost armor
- Lord Hagen now given the right key to the hero when he shall eliminate the thieves
- Foci at Nagon only can be delivered if quest already was given
- Fixed corrupt savegames loading a quicksave under certain circumstances
- Fixed wrong condition for last upgrade of Judge armor